--- a/scratch.html
+++ b/scratch.html
@@ -19,7 +19,7 @@
 
   <!-- Image Section -->
   <div class="container my-5 text-center">
-    <img src="images/myphoto.jpg" alt="Me in the outdoors" class="img-fluid rounded shadow">
+    <img src="myphoto.jpg" alt="Me in the outdoors" class="img-fluid rounded shadow">
     <p class="mt-3">One of my favorite outdoor moments.</p>
   </div>
 
